Fix submenu z-index issue

--- a/sass/blocks/_boss-common-elements.sass
+++ b/sass/blocks/_boss-common-elements.sass
@@ -68,6 +68,7 @@ $block: ".boss"
 
   &-submenu
     top: 55px
+    z-index: 999
 
 
   &-flex-row
